# aoa-4pda-connector

./: .env.example  .gitignore  AGENTS.md  BOUNDARIES.md  CHANGELOG.md  CHARTER.md  README.md  ROADMAP.md  pyproject.toml
.connector-state/: AGENTS.md  README.md
.github/workflows/: validate.yml
connector/: README.md  SOURCE_POLICY.md  STORAGE_POLICY.md
connector/manifests/: artifact_classes.yaml  connector_manifest.yaml  route_allowlist.yaml
connector/profiles/: focused-device.yaml  full-public.yaml  redmi-note-10-pro.yaml  starter.yaml  xiaomi-13t.yaml  xiaomi_13t_information_needs.json
connector/schemas/: answer_packet.schema.json  applicability_report.schema.json  claim.schema.json  claim_relation.schema.json  conflict_report.schema.json  crawl_receipt.schema.json  evidence_packet.schema.json  freshness_report.schema.json  graph_edge.schema.json  graph_node.schema.json  index_manifest.schema.json  materialize_receipt.schema.json  normalized_post.schema.json  normalized_topic.schema.json  vector_index.schema.json  (+2 more)
docs/: AGENT_INSTALL_ROUTE.md  ARCHITECTURE.md  CONNECTOR_FAMILY_CLAIM_CONTRACT.md  CONNECTOR_READY.md  COVERAGE.md  DISCOVERY.md  EXTERNAL_STORAGE.md  GRAPH_MODEL.md  INSTALL.md  LIMITS_AND_ETHICS.md  MCP_ROLLOUT.md  OPERATIONS.md  QUERY_MODEL.md  REFRESH.md  RUNTIME_CONTRACT.md  SEED_REVIEW.md  STARTER_PROOF.md
evals/: AGENTS.md  PORT.yaml  README.md
kag/: AGENTS.md  README.md  manifest.json
scripts/: validate_connector.py  validate_local_stats_port.py  verify_agent_install_route.py
stats/: AGENTS.md  README.md  port.manifest.json
(+337 files in other folders)
